# gtd-dashboard

./: .gitignore  .gtd-dashboard.yaml.example  README.md  invoke.ps1  pyproject.toml  sonar-project.properties
.github/workflows/: release-msi.yml
packaging/windows/: build-msi.ps1  gtd-dashboard.spec  gtd-dashboard.wxs  gtd-dashboard_launcher.py
scripts/: get_msi_product_code.ps1
src/gtd_dashboard/: __init__.py  aggregator.py  cli.py  config.py  models.py  parser.py  reports.py  work_context.py
tests/: __init__.py  test_parser.py
